# MusicAnalyzerUI

./: .gitignore  ImplementsRule.md  README.md
backend/: main.py
backend/src-tauri/: tauri.conf.json
backend/src-tauri/capabilities/: default.json
backend/src-tauri/src/: lib.rs
doc/: CodingRule.md  Components.md  ImplementsRule.md  bugfix_particle_half_circle.md  bugfix_wasm_panic_keydown_listener_leak.md  bugfix_wrong_json_loaded_via_output_dir_enumeration.md
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/docs/: VisualizeParticleSystemSpec.md  section_card_alignment.md
frontend/src/: api.rs  audio_setup.rs  config.rs  key_estimation.rs  main.rs  state.rs  types.rs
frontend/src/audio/: engine.rs  mod.rs
frontend/src/components/: error_display.rs  mod.rs  player.rs  section_card.rs  settings.rs  stem_mixer.rs  timeline.rs  track_list.rs  viz_canvas.rs
frontend/src/pages/: analysis.rs  home.rs  mod.rs  visualization.rs
