[package]
name = "music-analyzer-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos-use = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-net = { version = "0.6", features = ["http"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "HtmlAudioElement",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "Document",
  "Element",
  "Event",
  "EventTarget",
  "DomRect",
  "KeyboardEvent",
  "MouseEvent",
  "TimeRanges",
  "Window",
  "AudioBuffer",
  "AudioBufferSourceNode",
  "AudioContext",
  "AudioContextState",
  "AudioDestinationNode",
  "AudioNode",
  "AudioParam",
  "AudioScheduledSourceNode",
  "CanvasGradient",
  "CanvasRenderingContext2d",
  "GainNode",
  "ResizeObserver",
  "ResizeObserverEntry",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
